--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
           <div class="col-lg-4">
             <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">Datum: </span>
+                <span class="input-group-text">Monatliche: </span>
               </div>
               <input type="date" class="form-control" v-model="txRegularsDate" />
               <div class="input-group-append">
