--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,15 @@
               <i :class="filterToggleClass[dataKey]"></i>
             </button>
           </div>
-          <div class="col-lg-4"></div>
+          <div class="col-lg-4">
+            <button
+              type="button"
+              @click="onClickToggleShowAll"
+              :class="'w-100 btn btn-sm ' + (showAll ? 'btn-outline-secondary' : 'btn-secondary')">
+              <span v-if="showAll">Erste 50 anzeigen</span>
+              <span v-else>Alle anzeigen</span>
+            </button>
+          </div>
           <div class="col-lg-4">
             <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
