--- a/public/index.html
+++ b/public/index.html
@@ -157,6 +157,16 @@
               :tx="tx"
               :key="tx.id"
             ></tr>
+            <tr v-if="!showAll && filteredTransactions.length == 50">
+              <td colspan="4">
+                <button
+                  type="button"
+                  @click="onClickToggleShowAll"
+                  :class="'w-100 btn btn-sm ' + (showAll ? 'btn-outline-secondary' : 'btn-secondary')">
+                  <span v-else>Alle anzeigen</span>
+                </button>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
