--- a/public/index.html
+++ b/public/index.html
@@ -162,8 +162,8 @@
                 <button
                   type="button"
                   @click="onClickToggleShowAll"
-                  :class="'w-100 btn btn-sm ' + (showAll ? 'btn-outline-secondary' : 'btn-secondary')">
-                  <span v-else>Alle anzeigen</span>
+                  :class="'w-100 btn btn ' + (showAll ? 'btn-outline-secondary' : 'btn-secondary')">
+                  <span>Alle anzeigen</span>
                 </button>
               </td>
             </tr>
